# lingmo-widgets

./: CMakeLists.txt
.github/workflows/: build.yml  package.yml
debian/: changelog  control  copyright
ocean/: CMakeLists.txt
ocean/liboceancommon/: CMakeLists.txt
ocean/misc/kde4ocean/: CMakeLists.txt
ocean/misc/kde4ocean/src/: CMakeLists.txt
ocean/oceanui/: CMakeLists.txt  ocean.json  oceanhelper.cpp  oceanstyleplugin.cpp
ocean/oceanui/config/: CMakeLists.txt
platformtheme/: CMakeLists.txt
rpm/: lingmo-widgets.spec
widgetstyle/: CMakeLists.txt  basestyle.cpp
